# tradio

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yaml  test.yaml
migrations/: 20221007173245_init.sql
src/: app.rs  main.rs
src/api/: mod.rs  radio_browser.rs
src/models/: mod.rs  search_params.rs  station.rs
src/player/: mod.rs
src/player/rodio/: mod.rs  source.rs
src/storage/: mod.rs  sqlite.rs
src/ui/: mod.rs
src/ui/components/: devices.rs  library.rs  mod.rs  playbar.rs  table.rs
