[package]
name = "tradio"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gadavy/tradio"
homepage = "https://github.com/gadavy/tradio"
keywords = ["terminal", "tui", "music", "radio"]
categories = ["command-line-interface", "command-line-utilities", "multimedia::audio"]

[[bin]]
name = "tradio"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.21", features = ["full"] }
symphonia = { version = "0.5", features = ["mp3", "aac"] }
rodio = { version = "0.16", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
futures = "0.3"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }

# ui utils.
crossterm = { version = "0.25", features = ["event-stream"] }
tui = { version = "0.19", features = ["crossterm"], default-features = false }

# TODO: remove.
log = "0.4"
simplelog = "0.12"
